# open-football

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  README.md  player_state_transitions.dot  players.odb  players.sample.json  rustfmt.toml
.dev/match/: Cargo.toml  SHOT_ANALYSIS.md  player_state_transitions.dot
.dev/match/src/: main.rs  viewer.html
.dev/simulate/: Cargo.toml
.dev/simulate/src/: main.rs
src/core/: Cargo.toml
src/core/src/: config.rs  context.rs  lib.rs  perf.rs  simulator.rs
src/core/src/ai/: batch.rs  collector.rs  mod.rs  request.rs
src/core/src/club/: ai.rs  club.rs  context.rs  facilities.rs  mod.rs  person.rs  relations.rs  result.rs  status.rs
src/core/src/club/academy/: academy.rs  graduation.rs  intake.rs  mod.rs  result.rs  settings.rs  training.rs  tuning.rs
src/core/src/club/board/: board.rs  context.rs  manager_market.rs  mod.rs  mood.rs  result.rs
src/core/src/club/club/: finances.rs  graduation.rs  mod.rs  squad.rs  utilization.rs
src/core/src/club/finance/: balance.rs  history.rs  result.rs  sponsorship.rs
src/core/src/club/player/: adaptation.rs  agent.rs  attributes.rs  behaviour_config.rs  builder.rs  collection.rs  decisions.rs  development.rs  display.rs  events.rs  happiness.rs  injury.rs  interaction.rs  language.rs  lifecycle.rs  load.rs  mod.rs  plan.rs  player.rs  position.rs  position_weights.rs  rapport.rs  registry.rs  result.rs  skills.rs  statistics.rs  status.rs  traits.rs  utils.rs
src/core/src/club/staff/: attributes.rs  contract.rs  display.rs  free_pool.rs  mod.rs  result.rs  staff.rs  staff_stub.rs  transfer_resolution.rs
src/core/src/club/team/: builder.rs  captaincy.rs  chemistry_builder.rs  coach_perception.rs  collection.rs  context.rs  mentorship.rs  mod.rs  preventive_rest.rs  reputation.rs  result.rs  social_view.rs  squad_status.rs  team.rs  team_talks.rs  team_type.rs
src/core/src/club/transfers/: mod.rs  strategy.rs  tests.rs
src/core/src/common/neural/: net.rs
src/core/src/competitions/: global.rs  mod.rs  simulation.rs
src/core/src/continent/: context.rs  continent.rs  friendlies.rs  mod.rs  national_competition_sim.rs  result.rs
src/core/src/continent/competitions/: champions_league.rs  conference_league.rs  copa_libertadores.rs  europa_league.rs  mod.rs  super_cup.rs  types.rs
src/core/src/continent/economics/: types.rs
src/core/src/continent/national/: competition.rs  config.rs  mod.rs  (+2 more)
src/core/src/country/: builder.rs  competitions.rs  context.rs  country.rs  economics.rs  generator_data.rs  media.rs  mod.rs  national_team.rs  regulations.rs  result.rs  settings.rs
src/core/src/league/: awards.rs  collection.rs  context.rs  domestic_cup.rs  dynamics.rs  league.rs  matchday.rs  milestones.rs  mod.rs  player_of_week.rs  playoff.rs  processing.rs  regulations.rs  result.rs  season.rs  season_phase.rs  statistics.rs
src/core/src/match/: calibration.rs  dispatch.rs  game.rs  logs.rs  mod.rs  pool.rs  result.rs  rules.rs  state.rs
src/core/src/performance/: counters.rs  mod.rs  subphase.rs
src/core/src/shared/: currency.rs  fullname.rs  location.rs  mod.rs
src/core/src/simulator/: country_info.rs  data.rs  loan_wages.rs  matchday.rs  mod.rs  result.rs  seeding.rs
src/core/src/transfers/: country_pair_policy.rs  market.rs  mod.rs  negotiation.rs  offer.rs  pipeline.rs  pipeline_processor.rs  pool.rs  scouting_region.rs  squad_needs.rs  staff_resolver.rs  transfer.rs  window.rs
src/core/src/utils/: cpu.rs  date.rs  estimation.rs  formatting.rs  logging.rs  mod.rs
src/database/: Cargo.toml  build.rs
src/database/src/: lib.rs
src/database/src/data/: clubs.json  countries.json  database.db  leagues.json  players.odb
src/database/src/generators/: convert.rs  country_bias.rs  generator.rs  mod.rs  player.rs  rng.rs  staff.rs
src/database/src/loaders/: club.rs  compiled.rs  continent.rs  country.rs  data_tree.rs  domestic_cup.rs  league.rs  mod.rs  names.rs  national.rs  national_competition.rs  players.rs  players_odb.rs
src/server/: Cargo.toml
src/server/assets/css/: style.css
src/server/src/: layout.html  lib.rs  routes.rs
src/server/src/common/: default_handler.rs
src/server/src/countries/: get.rs  list.rs  routes.rs
src/server/src/game/: process.rs
src/server/src/leagues/: get.rs
src/server/src/match/: chunk.rs  data.rs  get.rs  mod.rs  routes.rs
src/server/src/player/: get.rs
src/server/src/teams/: get.rs  mod.rs  schedule.rs
src/web/: Cargo.toml  build.rs
src/web/assets/css/: font.min.css  style.css  styles.min.css
src/web/assets/i18n/: de.json  en.json  es.json  fr.json  ja.json  pt.json  ru.json  tr.json  zh.json
src/web/assets/js/: badge-deck.js  fm-dialog.js
src/web/src/: error.rs  layout.html  lib.rs  routes.rs  settings.rs
src/web/src/ai/: agent.rs  client.rs  index.html  jobs.rs  mod.rs  registry.rs  routes.rs  tools.rs
src/web/src/champions_league/: mod.rs
src/web/src/common/: default_handler.rs  friendly_source.rs  mod.rs  potential_stars.rs  routes.rs  slug.rs
src/web/src/conference_league/: mod.rs
src/web/src/copa_libertadores/: mod.rs
src/web/src/countries/: countries_layout.html  mod.rs
src/web/src/cups/: mod.rs
src/web/src/date/: current_date.rs  routes.rs
src/web/src/europa_league/: mod.rs
src/web/src/face/: generator.rs  mod.rs  routes.rs
src/web/src/game/: create.rs  process.rs  routes.rs
src/web/src/i18n/: mod.rs
src/web/src/leagues/: mod.rs
src/web/src/match/: chunk.rs  routes.rs
src/web/src/national_competitions/: mod.rs
src/web/src/ollama/: mod.rs
src/web/src/performance/: index.html  mod.rs  routes.rs
src/web/src/player/: mod.rs  player_layout.html
src/web/src/playoffs/: mod.rs
src/web/src/search/: index.html  mod.rs  routes.rs
src/web/src/staff/: mod.rs
src/web/src/teams/: mod.rs  team_layout.html
src/web/src/views/: mod.rs
src/web/src/watchlist/: index.html  mod.rs  routes.rs
src/web/src/worker/: config.rs  dispatcher.rs  mod.rs  protocol.rs  registry.rs  server.rs  transport.rs  wire.rs
src/web/src/workers/: index.html  mod.rs  routes.rs
(+2115 files in other folders)
