[workspace]
members = ["src/core", "src/database", "src/web"]
exclude = [".dev/match"]

[workspace.package]
version = "0.9.73"
authors = ["Artemov Ivan <zoxexivo@gmail.com>"]
edition = "2024"

[package]
name = "open_football"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
simulator_core = { path = "src/core", package = "core" }
web = { path = "src/web" }
database = { path = "src/database" }
log = { version = "0.4.29", features = ["release_max_level_info"] }
env_logger = "0.11.10"
color-eyre = "0.6.5"
tokio = { version = "1.52.1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"