[workspace]
members = ["src/core", "src/database", "src/web"]
exclude = [".dev/match", ".dev/simulate"]

[workspace.package]
version = "1.3.500"

authors = ["Artemov Ivan (ZOXEXIVO) <zoxexivo@gmail.com>"]
edition = "2024"

[package]
name = "open_football"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
# Pass-throughs for the match engine features defined in `core` and
# forwarded by `web`. Run the app with e.g. `cargo run --features
# match-stub` to enable the 0-0 stub for profiling.
match = ["match-logs", "match-stub"]
match-logs = ["simulator_core/match-logs", "web/match-logs"]
match-stub = ["simulator_core/match-stub", "web/match-stub"]

# Production release codegen. Fat LTO + a single codegen unit let the
# compiler inline across the whole core crate (the entire match-AI hot path
# lives there) — measured ~3% on the match engine alone, bit-identical
# (Rust keeps IEEE-strict float math regardless of inlining). Deliberately
# NOT `panic = "abort"`: the world simulator relies on rayon's per-continent
# catch_unwind isolation (a single match panic must not abort the process).
[profile.release]
lto = true
codegen-units = 1

# Optimized build that keeps full debug info + symbols so a sampling
# profiler (samply) can resolve stacks. `inherits = "release"` ⇒ same
# opt-level/LTO as production, so the trace reflects real hot paths.
# Build the headless profiling harness with it:
#   cargo build --profile profiling --example profile_sim
[profile.profiling]
inherits = "release"
debug = true
strip = false

[dependencies]
simulator_core = { path = "src/core", package = "core" }
web = { path = "src/web" }
database = { path = "src/database" }
log = { version = "0.4.33", features = ["release_max_level_info"] }
env_logger = "0.11.10"
color-eyre = "0.6.5"
tokio = { version = "1.52.3", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1"
