[package]
name = "dev_match"
version = "0.1.0"
edition = "2024"

[dependencies]
# Enable the core crate's `match-logs` feature so the dev analytic
# harness gets per-shot / blowout diagnostics. Production runs
# (src/web/simulator.rs) leave the feature off and the log sites
# compile to no-ops.
core = { path = "../../src/core", features = ["match-logs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
rayon = "1.12"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
env_logger = "0.11"
log = "0.4"
rand = "0.10"
