[package]
name = "dev_match"
version = "0.1.0"
edition = "2024"

[dependencies]
# Enable the core crate's `match-logs` feature so the dev analytic
# harness gets per-shot / blowout diagnostics. Production runs
# (src/web/simulator.rs) leave the feature off and the log sites
# compile to no-ops.
core = { path = "../../src/core", features = ["match-logs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
rayon = "1.12"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
env_logger = "0.11"
log = "0.4"
rand = "0.10"

# Match the optimized production profile so the bench reflects real
# codegen. Fat LTO + a single codegen unit let the compiler inline across
# the whole core crate (the entire AI hot path lives there). Bit-identical
# results — Rust keeps IEEE-strict float math regardless of inlining. NB:
# deliberately NOT `panic = "abort"` — the world sim relies on rayon's
# per-continent catch_unwind isolation.
[profile.release]
lto = true
codegen-units = 1
