[package]
name = "core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.44"
rand = "0.10.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
itertools = "0.14.0"
serde_json = "1.0"
nalgebra = { version = "0.34.1", features = ["serde-serialize", "rand"] }