[package]
name = "core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []
# Enables diagnostic logs from the match engine (shot reasons, blowout
# profile, per-tick ball decisions). Off by default so the production
# simulator (`simulator.rs`, web runs) stays silent; dev_match enables
# it for the analytic harness. All match-log sites go through the
# `match_log_*!` macros in `src/core/src/match_logs.rs` which compile
# to no-ops when this feature is off.
match-logs = []

[dependencies]
chrono = "0.4.44"
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
itertools = "0.14.0"
serde_json = "1.0"
nalgebra = { version = "0.34.2", features = ["serde-serialize", "rand"] }
tokio = { version = "1.52.1", features = ["time"] }