[package]
name = "database"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
core = { path = "../core" }
serde_json = "1.0.151"
serde = { version = "1.0.229", features = ["derive"] }
rand = "0.10.2"
rayon = "1.12"
chrono = { version = "0.4.45", features = ["serde"] }
flate2 = "1.1"
log = "0.4"
