[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
database = { path = "../database" }
axum = "0.8.4"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = "0.4.42"
itertools = "0.14.0"
async-compression = { version = "0.4.30", features = ["gzip", "tokio"] }
futures = "0.3.31"
