[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
database = { path = "../database" }
axum = "0.8.6"
log = "0.4.28"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "catch-panic"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
itertools = "0.14.0"
async-compression = { version = "0.4.33", features = ["gzip", "tokio"] }
futures = "0.3.31"
