[package]
name = "web"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
core = { path = "../core" }
database = { path = "../database" }
axum = "0.8.9"
log = "0.4.29"
tokio = { version = "1.52.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "catch-panic"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
itertools = "0.14.0"
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["axum-0.8"] }
async-compression = { version = "0.4.42", features = ["gzip", "tokio"] }
ollama-rs = "0.3.4"
rust-embed = "8.11"
mime_guess = "2.0.5"
hostname = "0.4.2"
