[package]
name = "web"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
# Pass-throughs for the match engine features defined in `core`.
# Lets the parent binary forward `--features match-stub` etc. without
# spelling out `core/match-stub` on the command line.
match = ["match-logs", "match-stub"]
match-logs = ["core/match-logs"]
match-stub = ["core/match-stub"]

[dependencies]
core = { path = "../core" }
database = { path = "../database" }
axum = "0.8.9"
log = "0.4.29"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["fs", "catch-panic"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
itertools = "0.14.0"
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["axum-0.8"] }
async-compression = { version = "0.4.42", features = ["gzip", "tokio"] }
ollama-rs = "0.3.4"
rust-embed = "8.11"
mime_guess = "2.0.5"
hostname = "0.4.2"
sysinfo = { version = "0.39.1", features = ["system"] }
