[package]
name = "web"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
# Pass-throughs for the match engine features defined in `core`.
# Lets the parent binary forward `--features match-stub` etc. without
# spelling out `core/match-stub` on the command line.
match = ["match-logs", "match-stub"]
match-logs = ["core/match-logs"]
match-stub = ["core/match-stub"]

[dependencies]
core = { path = "../core" }
database = { path = "../database" }
axum = "0.8.9"
log = "0.4.33"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs", "catch-panic"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
chrono = "0.4.45"
itertools = "0.15.0"
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["axum-0.8"] }
async-compression = { version = "0.4.42", features = ["gzip", "tokio"] }
rust-embed = "8.12"
mime_guess = "2.0.5"
hostname = "0.4.2"
sysinfo = { version = "0.39.6", features = ["system"] }
bincode = { version = "2.0", features = ["serde"] }
toml = "1.1"
